--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <meta name="keywords" content="Portfolio, Front-end Developer, Junior Front-end Developer, JavaScript developer">
     <meta name="author" content="Grzegorz Kowalczyk">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
