--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="column">
                     <h3 class="title">Grzegorz Kowalczyk</h3>
                     <h4 class="title is-6">Hello!</h4>
-                    <p class="paragraph">First of all, thank you for reading this. I hope you will find the informations you wanted to find visiting my portfolio and if that's not the case you can
+                    <p class="paragraph">First of all, thank you for reading this. I hope you will find the information you wanted to find visiting my portfolio and if that's not the case you can
                         always <a href="#contact">contact
                             me</a>.<br>
                         Want to know a bit about me? I'll try to make it quick.
@@ -84,7 +84,7 @@
                     </blockquote>
                     <p class="paragraph">
                         Throughout my life nothing has changed (well, apart from getting older of course...) and I love new challenges! No matter if it's a coding challenge, trying
-                        different food or jumping into foam pits from a few meters despity my fear of falling.
+                        different food or jumping into foam pits from a few meters despite my fear of falling.
                     </p>
                     <p class="paragraph">As a developer I lack working experience - something I hope to make up in the nearest future. But even with that being said I consider myself a worthy addition
                         to a team - both as a person and a developer.</p>
@@ -115,17 +115,17 @@
             <div class="columns">
                 <div class="column">
                     <p class="paragraph">
-                        These are the technologies I have been using so far. Please note that <strong>the value only represent how comfortable I feel with a specific technology</strong>,
+                        These are the technologies I have been using so far. Please note that <strong>the value only represents how comfortable I feel with a specific technology</strong>,
                         as it's impossible to rate the knowledge of a given language. Still, I wanted to include some way of showing what I like to work with.
                     </p>
                     <p class="paragraph">
                         While I'm only familiar with front-end technologies I consider learning Node and MongoDB as a part of my long-term
                         plan of becoming a full-stack developer. I am also tempted to learn React to be more versatile in different situations and among different developers. For now I stick with Vue
-                        which I find the most elegant and it's documantation is just out of this world.
+                        which I find the most elegant and its documantation is just out of this world.
                     </p>
                     <p class="paragraph">
                         As a CSS framework I went with Bulma - my friend's recommendation. What I like the most about it is that it doesn't come with JavaScript so you can focus purely on the layout
-                        and then implement needed interactions (what also reduces it's size). What is more, I just hate to see all those 'mb-X' classes whenever I come across Bootstrap.
+                        and then implement needed interactions (which also reduces it's size). What is more, I just hate to see all those 'mb-X' classes whenever I come across Bootstrap.
                     </p>
                 </div>
                 <div class="column">
@@ -231,7 +231,7 @@
                     <div class="column project-description">
                         <p>My first project that includes preparing backend. I had plans for event calendar back in 2017 when I was just starting learning all those technologies. The time has come -
                             and I finally felt ready to face this challenge. Before I could start I needed plenty of hours to read about APIs, servers, databases etc. While my approach might not be
-                            perfect I feel satisfied with what I made. It's very likely that I haven't finished it yet in the time you are reading this - there are a lot of features I wanted to
+                            perfect I feel satisfied with what I made. It's very likely that I haven't finished it yet by the time you are reading this - there are a lot of features I wanted to
                             implement and it will take some time until I can say I'm fully satisfied.
                         </p>
                         <div class="project-links">
@@ -369,7 +369,7 @@
                     </div>
                     <div class="column project-description">
                         <p>This is one of those things you just want to have done by yourself. I didn't care much about visual side and focused on implementing logic behind it. It could definitely use
-                            refactor but it has to wait - there are bigger projects to be made. Still as the project that probably took me the least time to make it fulfills it's designation.
+                            refactor but it has to wait - there are bigger projects to be made. Still as the project that probably took me the least time to make it fulfills its designation.
                         </p>
                         <div class="project-links">
                             <a class="button is-main" href="https://effhave.github.io/Reaction-test/">Preview</a>
