--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="title cover-title">Grzegorz Kowalczyk</p>
         <q class="subtitle cover-title">I'm not stopping unless it works</q>
         <div class="hero-buttons">
-          <a href="Grzegorz Kowalczyk CV ENG.pdf" target="_blank" class="button is-main">Download CV</a>
+          <a href="Grzegorz_Kowalczyk_CV.pdf" target="_blank" class="button is-main">Download CV</a>
           <ul class="social-media-list">
             <li class="social-media-item">
               <a class="button is-medium is-main-inverted" href="https://www.linkedin.com/in/grzegorz-kowalczyk/" target="_blank" rel="noopener noreferrer">
