--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <a class="navbar-item" href="index.html">
           <img class="navbar-img" src="img/navimg.png" alt="Grzegorz Kowalczyk - Front-end Developer">
           <div class="navbar-description">
-            <h1 class="title has-text-white is-5 is-size-6-mobile">Grzegorz Kowalczyk</h1>
-            <h2 class="subtitle has-text-main is-size-6-mobile">Front-end Developer</h2>
+            <h1 class="navbar-title is-size-6-mobile">Grzegorz Kowalczyk</h1>
+            <h2 class="navbar-subtitle">Front-end Developer</h2>
           </div>
         </a>
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
@@ -50,7 +50,7 @@
         <p class="title cover-title">Grzegorz Kowalczyk</p>
         <q class="subtitle cover-title">I'm not stopping unless it works</q>
         <div class="hero-buttons">
-          <a href="Grzegorz_Kowalczyk_CV.pdf" target="_blank" class="button is-main">Download CV</a>
+          <a href="Grzegorz_Kowalczyk_CV.pdf" target="_blank" class="button is-main">Download CV (PL)</a>
           <ul class="social-media-list">
             <li class="social-media-item">
               <a class="button is-medium is-main-inverted" href="https://www.linkedin.com/in/grzegorz-kowalczyk/" target="_blank" rel="noopener noreferrer">
@@ -102,8 +102,8 @@
             Throughout my life nothing has changed (well, apart from getting older of course...) and I love new challenges! No matter if it's a coding challenge, trying
             different food or jumping into foam pits from a few meters despite my fear of falling.
           </p>
-          <p class="paragraph">As a developer I lack working experience - something I hope to make up in the nearest future. But even with that being said I consider myself a worthy addition
-            to a team - both as a person and a developer.</p>
+          <p class="paragraph">I consider myself a worthy addition
+            to a team - both as a person and a developer. Check out for youself.</p>
           <ul class="social-media-list is-flex">
             <li class="social-media-item">
               <a class="button is-medium is-main-inverted" href="https://www.linkedin.com/in/grzegorz-kowalczyk/" target="_blank" rel="noopener noreferrer">
@@ -135,13 +135,13 @@
             as it's impossible to rate the knowledge of a given language. Still, I wanted to include some way of showing what I like to work with.
           </p>
           <p class="paragraph">
-            While I'm only familiar with front-end technologies I consider learning Node and MongoDB as a part of my long-term
-            plan of becoming a full-stack developer. I am also tempted to learn React to be more versatile in different situations and among different developers. For now I stick with Vue
+            While I'm familiar mostly with front-end technologies I consider expanding my knowledge of Node and MongoDB as a part of my long-term
+            plan of becoming a full-stack developer. I am also tempted to continue learning React to be more versatile in different situations and among different developers. For now I stick with Vue
             which I find the most elegant and its documantation is just out of this world.
           </p>
           <p class="paragraph">
             As a CSS framework I went with Bulma - my friend's recommendation. What I like the most about it is that it doesn't come with JavaScript so you can focus purely on the layout
-            and then implement needed interactions (which also reduces it's size). What is more, I just hate to see all those 'mb-X' classes whenever I come across Bootstrap.
+            and then implement needed interactions (which also reduces it's size). I eventually picked up Bootstrap as well.
           </p>
         </div>
         <div class="column">
@@ -156,15 +156,7 @@
             </li>
             <li class="skill-item">
               <h3 class="title is-6">Sass</h3>
-              <div class="skill-container" data-value="45">
-                <div class="skill-value">
-                </div>
-              </div>
-              <span></span>
-            </li>
-            <li class="skill-item">
-              <h3 class="title is-6">RWD</h3>
-              <div class="skill-container" data-value="70">
+              <div class="skill-container" data-value="50">
                 <div class="skill-value">
                 </div>
               </div>
@@ -179,8 +171,16 @@
               <span></span>
             </li>
             <li class="skill-item">
+              <h3 class="title is-6">Bootstrap</h3>
+              <div class="skill-container" data-value="80">
+                <div class="skill-value">
+                </div>
+              </div>
+              <span></span>
+            </li>
+            <li class="skill-item">
               <h3 class="title is-6">JavaScript</h3>
-              <div class="skill-container" data-value="75">
+              <div class="skill-container" data-value="85">
                 <div class="skill-value">
                 </div>
               </div>
@@ -188,7 +188,7 @@
             </li>
             <li class="skill-item">
               <h3 class="title is-6">jQuery</h3>
-              <div class="skill-container" data-value="30">
+              <div class="skill-container" data-value="20">
                 <div class="skill-value">
                 </div>
               </div>
@@ -196,16 +196,23 @@
             </li>
             <li class="skill-item">
               <h3 class="title is-6">Vue/Vuex</h3>
-              <div class="skill-container" data-value="60">
+              <div class="skill-container" data-value="70">
                 <div class="skill-value">
                 </div>
               </div>
               <span></span>
             </li>
-
+            <li class="skill-item">
+              <h3 class="title is-6">React</h3>
+              <div class="skill-container" data-value="25">
+                <div class="skill-value">
+                </div>
+              </div>
+              <span></span>
+            </li>
             <li class="skill-item">
               <h3 class="title is-6">Git</h3>
-              <div class="skill-container" data-value="40">
+              <div class="skill-container" data-value="50">
                 <div class="skill-value">
                 </div>
               </div>
@@ -214,6 +221,14 @@
             <li class="skill-item">
               <h3 class="title is-6">Node.js with Express</h3>
               <div class="skill-container" data-value="40">
+                <div class="skill-value">
+                </div>
+              </div>
+              <span></span>
+            </li>
+            <li class="skill-item">
+              <h3 class="title is-6">Strapi</h3>
+              <div class="skill-container" data-value="70">
                 <div class="skill-value">
                 </div>
               </div>
@@ -231,6 +246,12 @@
         </div>
       </div>
     </section>
+    <!-- <section class="section is-fullheight" id="experience">
+      <header class="section-header">
+        <h2 class="title">Experience</h2>
+      </header>
+    </section> -->
+
     <section class="section is-fullheight" id="projects">
       <header class="section-header">
         <h2 class="title">Projects</h2>
@@ -324,35 +345,6 @@
       </article>
       <article class="box project-item">
         <header class="project-header">
-          <h3 class="title is-4">Audiopółka</h3>
-        </header>
-        <div class="columns is-paddingless is-marginless">
-          <div class="column is-narrow">
-            <figure class="image project-image has-border">
-              <img src="img/audiolib.jpg" alt="">
-            </figure>
-            <p class="project-tags tags">
-              <span class="tag is-main-inverted">Vue.js</span>
-              <span class="tag is-main-inverted">JavaScript</span>
-              <span class="tag is-main-inverted">REST</span>
-              <span class="tag is-main-inverted">HTML</span>
-              <span class="tag is-main-inverted">CSS</span>
-              <span class="tag is-main-inverted">Buefy</span>
-            </p>
-          </div>
-          <div class="column project-description">
-            <p>This is my second project which main task includes making GET request to remote database (Discogs). It was made with Vue and this time I left Vuex behind. Although the idea
-              looks similar to Streamers app I believe it's done better.
-            </p>
-            <div class="project-links">
-              <a class="button is-main" href="https://effhave.github.io/Audiolib/">Preview</a>
-              <a class="button is-main" href="https://github.com/effhAVE/Audiolib">Code</a>
-            </div>
-          </div>
-        </div>
-      </article>
-      <article class="box project-item">
-        <header class="project-header">
           <h3 class="title is-4">CountUp.js</h3>
         </header>
         <div class="columns is-paddingless is-marginless">
@@ -372,90 +364,6 @@
             <div class="project-links">
               <a class="button is-main" href="https://effhave.github.io/CountUp/demo.html">Preview</a>
               <a class="button is-main" href="https://github.com/effhAVE/CountUp">Code</a>
-            </div>
-          </div>
-        </div>
-      </article>
-      <article class="box project-item">
-        <header class="project-header">
-          <h3 class="title is-4">Mood tracker</h3>
-        </header>
-        <div class="columns is-paddingless is-marginless">
-          <div class="column is-narrow">
-            <figure class="image project-image has-border">
-              <img src="img/moodtracker.jpg" alt="">
-            </figure>
-            <p class="project-tags tags">
-              <span class="tag is-main-inverted">Vue.js</span>
-              <span class="tag is-main-inverted">Vuex</span>
-              <span class="tag is-main-inverted">JavaScript</span>
-              <span class="tag is-main-inverted">Chart.js</span>
-              <span class="tag is-main-inverted">HTML</span>
-              <span class="tag is-main-inverted">CSS</span>
-              <span class="tag is-main-inverted">Bulma</span>
-            </p>
-          </div>
-          <div class="column project-description">
-            <p>I was inspired to make this app by an existing mobile app. This is also my comeback to Vue - this time alongside with Vuex, as I got fed up with multiple custom events and
-              props that had to be inherited in multiple places. It showed me the power of Vuex, or store managment pattern in overall. I also used a library that I had to learn from
-              the scratch - chart.js. It filled the need of data's graphical representation.
-            </p>
-            <div class="project-links">
-              <a class="button is-main" href="https://effhave.github.io/Mood-tracker/#/">Preview</a>
-              <a class="button is-main" href="https://github.com/effhAVE/Mood-tracker">Code</a>
-            </div>
-          </div>
-        </div>
-      </article>
-      <article class="box project-item">
-        <header class="project-header">
-          <h3 class="title is-4">Reaction time test</h3>
-        </header>
-        <div class="columns is-paddingless is-marginless">
-          <div class="column is-narrow">
-            <figure class="image project-image has-border">
-              <img src="img/reactiontimetest.jpg" alt="">
-            </figure>
-            <p class="project-tags tags">
-              <span class="tag is-main-inverted">JavaScript</span>
-            </p>
-          </div>
-          <div class="column project-description">
-            <p>This is one of those things you just want to have done by yourself. I didn't care much about visual side and focused on implementing logic behind it. It could definitely use
-              refactor but it has to wait - there are bigger projects to be made. Still as the project that probably took me the least time to make it fulfills its designation.
-            </p>
-            <div class="project-links">
-              <a class="button is-main" href="https://effhave.github.io/Reaction-test/">Preview</a>
-              <a class="button is-main" href="https://github.com/effhAVE/Reaction-test">Code</a>
-            </div>
-          </div>
-        </div>
-      </article>
-      <article class="box project-item">
-        <header class="project-header">
-          <h3 class="title is-4">Streamers</h3>
-        </header>
-        <div class="columns is-paddingless is-marginless">
-          <div class="column is-narrow">
-            <figure class="image project-image has-border">
-              <img src="img/streamers.jpg" alt="">
-            </figure>
-            <p class="project-tags tags">
-              <span class="tag is-main-inverted">Vue.js</span>
-              <span class="tag is-main-inverted">JavaScript</span>
-              <span class="tag is-main-inverted">HTML</span>
-              <span class="tag is-main-inverted">CSS</span>
-              <span class="tag is-main-inverted">Bulma</span>
-            </p>
-          </div>
-          <div class="column project-description">
-            <p>My first Vue project and - let's be honest - my first JavaScript project at all. It was meant as a playground to learn APIs and AJAX. Looking at it after some time I see how
-              much I learnt during that period and how many things I would have done differently now. Still I think it was a cool idea to implement, especially for people watching
-              streams.
-            </p>
-            <div class="project-links">
-              <a class="button is-main" href="https://effhave.github.io/Streamers/">Preview</a>
-              <a class="button is-main" href="https://github.com/effhAVE/Streamers">Code</a>
             </div>
           </div>
         </div>
